[PR c++/84602] ICE with anon-struct

https://gcc.gnu.org/ml/gcc-patches/2018-02/msg01577.html
	PR c++/84602
	* name-lookup.h (search_anon_aggr): Add defaulted WANT_TYPE arg.
	* name-lookup.c (fields_linear_search): Look in an anon-aggr
	regardless of want_type.
	(search_anon_aggr): Just use get_class_binding_direct.

	PR c++/84602
	* g++.dg/lookup/pr84602.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258060 138bc75d-0d04-0410-961f-82ee72b054a4